src/test/ui/pub/pub-restricted-non-path.stderr
error: expected identifier, found `.`
  --> $DIR/pub-restricted-non-path.rs:13:6
   |
13 | pub (.) fn afn() {}
   |      ^

error: aborting due to previous error(s)

